2009-08-21 ivan
* Use full text search to find related documents (i.e. referencing documents)

2009-08-12 Kazuhiko
* use iframe_content in OOoDocument_viewAsWeb for Drawing and Presentation to have better paginations.
* use OOoDocument_viewAsWeb instead of Drawing_viewAsWeb in all preview for Drawing and Presentation.

2009-07-07 nicolas
* add dms_cache_factory to store conversion values in persisent storage like flare
To enable it, please update your DMS Preference.
(Preferred Conversion Cache)

2009-07-03 romain
* Revert latest proxy field library simplification, as the design was not finalized.

2009-07-03 jm
* Remove 'edit' transition on processing_status_workflow and reuse edit_workflow.

2009-05-15 yusei
* Add my_editor_field to Base_viewDMSFieldLibrary.

2009-05-08 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-05-04 Vincent
* Drop dependency on erp5_dms_catalog as the scriptable keys it provided are moved into erp5_catalog

2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-10 nicolas
* add update_frequency base category

2009-03-24 fabien
* some method need to be renamed after been moved so change the name everywhere

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-29 yusei
* Classification, Function fields are now translatable.

2008-10-14 yusei
* Added SortIndex property sheet to Image and File.

2008-10-14 yusei
* Start to develop version 5.3.

2008-10-03 yusei
* Fixed a bug which prevent to access to document_module/list.

2008-09-24 yusei
* Update xml format.

2008-09-07 yusei
* Update English messages.

2008-09-04 yusei
* Update English messages.

2008-09-04 yusei
* Fixed workflow title.

2008-09-03 yusei
* Fixed i18n markup in PDF_renderHTMLPreviewNavigation.

2008-07-06 yo
* Add effective date into Web Page.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-12 ivan
* Move Role Definition to erp5_base
