@@ -37,6 +37,7 @@ File | jump_to_successor
 File | jump_to_wiki_predecessor
 File | local_permission
 File | related_document
+File | view_editor
 Image Module | list_ui
 Image Module | sort_on
 Image Module | view
